--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
+    "@mui/material": "^5.14.18",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.5.16",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-use-websocket": "^4.3.1"
